# GUIForJavaSpringLicenseApp

./: ActivateWindow.cpp  ActivateWindow.h  AntivirusMainWindow.cpp  AntivirusMainWindow.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  PipeUtils.cpp  PipeUtils.h  RegistrationWindow.cpp  RegistrationWindow.h  TrayIcon.cpp  TrayIcon.h  main.cpp
